# Deep-Lynx-ML-Adapter

./: .env_sample  .gitignore  .gitlab-ci.yml  NOTICE.txt  README.md  pyproject.toml
adapter/: __init__.py  deep_lynx_import.py  deep_lynx_query.py  ml_adapter.py
data/: .gitignore
model/: __init__.py  ml_model.py
model/user_guide/: README.md  sample_model.ipynb
prediction/: .gitignore  __init__.py  ml_prediction.py
prediction/user_guide/: README.md  sample_prediction.ipynb
split/: hierarchical_clustering.ipynb  kennard_stone.ipynb  random.ipynb  sequential.ipynb
utils/: __init__.py  run_jupyter_notebook.py  validate.py
variable_selection/user_guide/: README.md  sample_variable_selection.ipynb
