[tool.poetry]
name = "ml-adapter"
version = "0.0.1"
description = ""
authors = ["Katherine Wilsdon <katherine.wilsdon@inl.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
requests = "*"
python-dotenv = "*"
deep-lynx = "^0.0.7"
pandas = "^1.3.3"
nbformat = "^5.1.3"
nbconvert = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
